<resources>
    <string name="login">Please Log-In</string>
    <string name="create_a_account">Create a Account</string>
    <string name="mail_address">Enter Mail</string>
    <string name="mail_password">Enter Password</string>
    <string name="ok">Okay</string>
    <string name="sign_in">Sign-In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign-Up</string>
    <string name="profile">Profile</string>
    <string name="Notification">Notification</string>
    <string name="current_location">Current Location</string>
    <string name="locationTitle_placeholder">Seroil</string>
    <string name="select">Select</string>
    <string name="address_line_placeholder">Horidhamlane, Ghoramara, Rajshahi</string>
    <string name="distance_placeholder">1.6 MILES AWAY</string>
    <string name="open_time_placeholder">OPEN 10:30 AM - 12:30 AM</string>
    <string name="lat_lng_placeholder">24°22'20.6"N 88°36'35.6"E</string>
    <string name="Optimize">Optimize</string>
    <string name="by_distance">By Distance</string>
    <string name="by_duration">By Duration</string>
    <string name="next">Next</string>
    <string name="user_name_placeholder">Sayed Mahmudul Alam</string>
    <string name="user_email_placeholder">syd@mail.com</string>
</resources>
