<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >

                <TextView
                    android:id="@+id/location_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/locationTitle_placeholder"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/title_text_size"
                    android:gravity="left" />

                <Button
                    android:id="@+id/select_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/select"
                    android:textColor="@color/white"
                    style="@style/RoundedSelectButton"/>

            </LinearLayout>

            <TextView
                android:id="@+id/address_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address_line_placeholder"
                android:gravity="left" />

            <TextView
                android:id="@+id/lat_lng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lat_lng_placeholder"
                android:gravity="left" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/distance_placeholder"
                    android:gravity="left" />

                <TextView
                    android:id="@+id/open_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/open_time_placeholder"
                    android:gravity="left" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</merge>