<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thyme.smalam119.routeplannerapplication.Map.ResultMap.ResultMapActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map_result"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <RadioGroup
            android:id="@+id/type_of_opt_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true">

            <RadioButton
                android:id="@+id/by_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_distance"/>

            <RadioButton
                android:id="@+id/by_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_duration"/>

        </RadioGroup>

        <Button
            android:id="@+id/opt_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Optimize"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary"/>

    </RelativeLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        />


</RelativeLayout>
