<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color_gradient_alternative"
    tools:context="com.thyme.smalam119.routeplannerapplication.Login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_account"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/normal_login_card"
        android:gravity="center"/>

    <android.support.v7.widget.CardView
        android:id="@+id/normal_login_card"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_edit_text_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"
                android:gravity="left"
                android:hint="@string/mail_address"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <EditText
                android:id="@+id/password_edit_text_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="15dp"
                android:gravity="left"
                android:hint="@string/mail_password"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@id/email_edit_text"
                android:inputType="textPassword"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textSize="15dp"
        android:textColor="@color/colorAccent"
        android:layout_below="@+id/normal_login_card"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
